tests/integration/snapshots/integration__worktrees__worktree_initial_attributions_snapshot_in_worktree_daemon_mode.snap
---
source: tests/integration/worktrees.rs
assertion_line: 448
expression: normalized
---
"COMMIT_SHA (AUTHOR TIMESTAMP 1) a\nCOMMIT_SHA (AUTHOR TIMESTAMP 2) b\n"
