tests/integration/snapshots/integration__worktrees__worktree_stats_snapshot_in_worktree_wrapper_mode.snap
---
source: tests/integration/worktrees.rs
expression: stats
---
CommitStats {
    human_additions: 1,
    unknown_additions: 0,
    ai_additions: 2,
    ai_accepted: 2,
    time_waiting_for_ai: 0,
    git_diff_deleted_lines: 0,
    git_diff_added_lines: 3,
    tool_model_breakdown: {
        "mock_ai::unknown": ToolModelHeadlineStats {
            ai_additions: 2,
            ai_accepted: 2,
            time_waiting_for_ai: 0,
        },
    },
}
